# randomBullshitGo-1

./: CMakeLists.txt
Exercises/: d  double.c
src/: Main.cpp
src/include/: Application.h
tests/: CMakeLists.txt  test_demo.cpp
